[project]
name = "rtta"
version = "0.1.3"
description = "Low latency incremental technical analysis"
readme = "README.md"
authors = [
    { name = "Adam DePrince", email = "adam.deprince@gmail.com" }
]
requires-python = ">=3.9.8"
dependencies = [
    "numpy>=2.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
build-backend = 'mesonpy'
requires = [
    'meson-python', # Or a specific version, e.g., 'meson-python >= 0.12.0'
    'meson', # Or a specific version, e.g., 'meson >= 1.0.0'
    'cython', # Or a specific version, e.g., 'cython >= 3.0.0a11'
    'numpy',
]


