[build-system]
requires = [
    "scikit-build-core>=0.12",
    "nanobind>=2.2",
    "fast-kalman==0.2.3",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyrtta"
version = "0.2.3"
description = "Low latency incremental technical analysis"
readme = "README.md"
requires-python = ">=3.9.8"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Adam DePrince", email = "adam.deprince@gmail.com" },
]
dependencies = [
    "fast-kalman==0.2.3",
    "numpy>=2.0.2",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
docs = ["Markdown>=3.5"]

[project.urls]
Homepage = "https://github.com/adamdeprince/rtta"
Repository = "https://github.com/adamdeprince/rtta"

[tool.scikit-build]
minimum-version = "0.12"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/rtta"]
wheel.exclude = ["**/*.cpp"]
# Stable ABI wheels for CPython 3.12+ (one binary wheel covers 3.12–3.14 on a given platform).
wheel.py-api = "cp312"
sdist.exclude = [".codex"]

[tool.scikit-build.cmake]
version = ">=3.21"

[tool.poetry]
# scikit-build-core builds the native extension; Poetry manages dependencies only.
package-mode = false
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = ">=3.9.8,<4.0"
fast-kalman = "0.2.3"

[tool.poetry.group.build.dependencies]
build = ">=1.2"
nanobind = ">=2.2"
scikit-build-core = ">=0.12"

[tool.poetry.group.dev.dependencies]
flake8 = ">=3.7"
pandas = ">=2.0"
pytest = ">=5.1"

[tool.poetry.group.docs.dependencies]
Markdown = ">=3.5"
