[metadata]
name = rtta
version = 0.1.5
description = Low latency incremental technical analysis
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
author = Adam DePrince
author_email = adam.deprince@gmail.com
url = https://github.com/adamdeprince/rtta
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: MIT License
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
cypack = data/*
